<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="371dp"
        android:layout_height="56dp"
        android:text="@string/blutu"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="112dp"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:backgroundTint="#0835FC"
        android:text="@string/celu"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:text="@string/conectar"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="@string/celu2"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button5"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="@string/celu3"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>