<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/label_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuraciones"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/button_top_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/idioma"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_settings"
        app:layout_constraintEnd_toStartOf="@+id/button_top_right"
        android:layout_margin="8dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_top_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/notificaciones"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_settings"
        app:layout_constraintStart_toEndOf="@+id/button_top_left"
        android:layout_margin="8dp"
        tools:ignore="VisualLintButtonSize" />


    <Button
        android:id="@+id/button_bottom_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/wifi"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_top_left"
        app:layout_constraintEnd_toStartOf="@+id/button_bottom_right"
        android:layout_margin="8dp"
        tools:ignore="VisualLintButtonSize" />


    <Button
        android:id="@+id/button_bottom_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/restablecer"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_top_right"
        app:layout_constraintStart_toEndOf="@+id/button_bottom_left"
        android:layout_margin="8dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
